# reg-capital-fairness-agentic-rag

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  capital_agent.py  fairness_agent.py  ops_agent.py  orchestrator.py  regulatory_agent.py
app/tools/: mesh_client.py
config/: settings.yaml
examples/: demo_sr11_7.py
